# EduGenie

./: .env.dev.example  .env.example  .env.main.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package.json  prd_text.txt
.claude/: CLAUDE.md  MEMORY.md  PLAN.md  PLAN_PHASE.md  SKILL.md  TASKS.md
.claude/specs/: api-design.md  database.md  deployment.md  gcp-infrastructure.md  integrations.md  mobile.md  stack.md  supabase-infrastructure.md
.github/workflows/: main.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  main.py
backend/app/agents/: base.py  orchestrator.py
backend/app/api/v1/: health.py
backend/app/integrations/: langchain.py  openai.py
backend/requirements/: base.txt  dev.txt
docs/: architecture.md  deployment.md  development.md
docs/architecture/: HLD.md  LLD.md  system_architecture.md
docs/database/: schema.md
frontend-web/: Dockerfile  next.config.js  tailwind.config.ts
infra/: cloudbuild.yaml
infra/scripts/: deploy-backend.sh  deploy-frontend.sh  seed-data.sh
infra/terraform/: main.tf  outputs.tf
mobile-app/: app.config.ts  app.json  eas.json
